# chip-8-emulator

./: .gitignore  README.md  web
chip8/: Cargo.toml
chip8/src/: lib.rs
desktop/: .gitignore  Cargo.toml
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/web/: index.html  index.js
