[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chip8 = { path = "../chip8" }
js-sys = "^0.3.46"
wasm-bindgen = "^0.2.69"
web-sys = { version = "^0.3.46", features = ["CanvasRenderingContext2d","Document", "Element", "HtmlCanvasElement", "ImageData", "KeyboardEvent", "Window"] }
